--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -1,12 +1,23 @@
-<h1>HELLO</h1>
+{% extends 'portfolio/base.html' %}
 
-{% for project in projects %}
-<div>
-    <h2>{{ project.title }}</h2>
-    <p>{{ project.description }}</p>
-    <img src="{{ project.image.url }}" alt="">
-    {% if not project.url %}
-        <a href="{{ project.url }}"></a>
-    {% endif %}
-</div>
-{% endfor %}
+{% block content %}
+
+    <a href="{% url 'blog:home' %}">Blogs</a>
+
+    <h1>Kurach</h1>
+    {% load static %}
+
+    <img src="{% static 'portfolio/123.jpg' %}">
+
+    {% for project in projects %}
+    <div>
+        <h2>{{ project.title }}</h2>
+        <p>{{ project.description }}</p>
+        <img src="{{ project.image.url }}" alt="">
+        {% if not project.url %}
+            <a href="{{ project.url }}"></a>
+        {% endif %}
+    </div>
+    {% endfor %}
+
+{% endblock %}
