--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -2,22 +2,38 @@
 
 {% block content %}
 
-    <a href="{% url 'blog:home' %}">Blogs</a>
-
-    <h1>Kurach</h1>
+    <div class="row justify-content-center mb-3">
+    <div class="col-md-9 text-center">
+        <h1 id="hometext" class="font-weight-bold">Курач :> <br> и его небольшая первая работа</h1>
+    </div>
+    </div>
     {% load static %}
 
-    <img src="{% static 'portfolio/123.jpg' %}">
+    <div class="row justify-content-center my-3">
+        <div class="col-5">
+          <img src="{% static 'portfolio/123.jpg' %}" class="img-fluid">
+        </div>
+    </div>
 
+    <h2 class="mt-5 text-center">Мои проеты</h2>
+    <hr>
+    <div class="row">
     {% for project in projects %}
-    <div>
-        <h2>{{ project.title }}</h2>
-        <p>{{ project.description }}</p>
-        <img src="{{ project.image.url }}" alt="">
-        {% if not project.url %}
-            <a href="{{ project.url }}"></a>
+    <div class="col-lg-4 col-md-6">
+
+        {% if project.url %}
+        <a href="{{ project.url }}" target="_blank">
+        <img src="{{ project.image.url }}" class="img-fluid mb-2">
+        </a>
+        {% else %}
+
+        <img src="{{ project.image.url }}" class="img-fluid mb-2">
         {% endif %}
+        <h3>{{ project.title }}</h3>
+        <p>{{ project.description }}</p>
+
     </div>
     {% endfor %}
+    </div>
 
 {% endblock %}
